@@ -256,6 +256,10 @@ static PyMethodDef rpmModuleMethods[] = {
 	NULL },
     { "labelCompare", (PyCFunction) labelCompare, METH_VARARGS|METH_KEYWORDS,
 	NULL },
+    { "evrCompare", (PyCFunction) evrCompare, METH_VARARGS|METH_KEYWORDS,
+	NULL },
+    { "evrSplit", (PyCFunction) evrSplit, METH_VARARGS|METH_KEYWORDS,
+	NULL },
     { "setVerbosity", (PyCFunction) setVerbosity, METH_VARARGS|METH_KEYWORDS,
 	NULL },
     { "setEpochPromote", (PyCFunction) setEpochPromote, METH_VARARGS|METH_KEYWORDS,
